fix: small gap size for custom skills

--- a/ui/static/css/sheet.css
+++ b/ui/static/css/sheet.css
@@ -1518,7 +1518,7 @@ h3 {
     }
 
     .layout-column {
-        gap: 2px;
+        gap: 5px;
     }
 }
 
